[metadata]
name = etos_lib
description = ETOS Library
author = Tobias Persson
author_email = tobias.persson@axis.com
license = Apache License, Version 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/eiffel-community/etos-library
project_urls =
    Documentation = https://etos.readthedocs.io/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=4.5a0,<4.6a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
# ~= 3.4 Means >=3.4, == 3.*
install_requires =
    gql[requests]~=3.4
    redis~=4.5
    eiffellib[rabbitmq]~=2.4
    requests~=2.31
    kubernetes~=26.1
    pyyaml~=6.0
    opentelemetry-api~=1.21
    opentelemetry-semantic-conventions~=0.42b0

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov etos_lib --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = etos_lib
